Revert "fixed error message in settings.js with too large iamge"
This reverts commit b05d35b89dc25d6f99f47a882273dd63b1281b5c.

--- a/frontend/app/src/static/css/home.css
+++ b/frontend/app/src/static/css/home.css
@@ -40,7 +40,7 @@
 .game-text-left h1 {
   padding: 0 !important;
   margin: 0 !important;
-
+  
 }
 .game-text-right h1 {
   padding: 0 !important;
@@ -54,11 +54,12 @@
 }
 
 .game-text-right:hover {
-  cursor: normal;
+  cursor: pointer;
   transform: translate(35px, 0);
 }
 
 .game-text-left:hover {
+  cursor: pointer;
   transform: translate(-35px, 0);
 }
 
